[package]
name = "parkinglotrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
qstring = "0.7.2"
actix-web = "4"
chrono = "0.4.24"
rusqlite = { version = "0.29.0", features = ["bundled", "chrono"] }
